base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-deployment
  labels:
    app: knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knowledge
  template:
    metadata:
      labels:
        app: knowledge
    spec:
#      terminationGracePeriodSeconds: 0
      containers:
      - name: knowledge
        image: knowledge:latest
        # image: gcr.io/my-demo-project-20210227/knowledge
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10; curl -X POST http://localhost:8080/actuator/shutdown"]
