base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-service
spec:
  selector:
    app: knowledge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
