base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: knowledge-ingress
  labels:
    app: knowledge
spec:
  backend:
    serviceName: knowledge-service
    servicePort: 80
  type: NodePort
